--- a/Copy/login/loginStyle.css
+++ b/Copy/login/loginStyle.css
@@ -31,6 +31,8 @@ h2{
     font-size: 2em;
     color: #fff;
     text-align: center;
+    position: relative;
+    top: 20px;
 }
 .inputbox{
     position: relative;
